<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center">

  <TextView style="@style/Info.Title" android:text="@string/info_title" />
  <TextView style="@style/Info.About" android:text="@string/info_about" />

  <ImageButton android:id="@+id/info_btn_link"
               android:src="@drawable/verdigris"
               android:adjustViewBounds="true"
               android:scaleType="fitCenter"
               android:padding="0dp"
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_margin="15dp" />

  <TextView style="@style/Info.About" android:text="@string/info_twitter" />
  <TextView style="@style/Info.Legal" android:text="@string/info_copyright" />
  <TextView style="@style/Info.Legal" android:text="@string/info_license" />

  <Button android:id="@+id/btn_info_close"
          android:text="@string/info_btn_close"
          style="@style/Close" />

</LinearLayout>
